--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Koodalarasan-FSD.github.io/Yoga",
+  "homepage": "https://Yoga.netlify.app",
   "name": "yoga_reactjs",
   "version": "0.1.0",
   "private": true,
@@ -24,8 +24,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
